finished account set up and OAuth
